FreedomSanboxAntDeploy/src/objects/Product_Price_Book__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Price Books</relationshipLabel>
        <relationshipName>Price_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advance_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Advance Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Education_Cess__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Education Cess</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Flat_Commission__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Flat Commission</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installment_value_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Installment Value 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installment_value_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Installment Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installment_value_3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Installment Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Category__c</fullName>
        <label>Price Category</label>
        <picklist>
            <picklistValues>
                <fullName>Upfront</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_End_date__c</fullName>
        <defaultValue>TODAY() + 30</defaultValue>
        <label>Price End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_Start_date__c</fullName>
        <label>Price Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_type__c</fullName>
        <label>Price Type</label>
        <picklist>
            <picklistValues>
                <fullName>Percentage of Investment Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage of Current Investment Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Amount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_value__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Products where Price Category is One Time, Price should be set as a decimal number containing 2 decimal places. e.g. 12545.22. 
Products where Price Category is other One Time, Price should be set as percentage containing 2 decimal places. e.g.  0.75.</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Code</label>
        <referenceTo>Product_Master__c</referenceTo>
        <relationshipLabel>Product Price Books</relationshipLabel>
        <relationshipName>Product_Price_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Renewal price</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Service Tax</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sp_Education_Cess__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sp. Education Cess</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <defaultValue>0</defaultValue>
        <label>VAT</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Price Book</label>
    <nameField>
        <displayFormat>PRBK-{0000000}</displayFormat>
        <label>Product Price Book Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Books</pluralLabel>
    <recordTypes>
        <fullName>Freedom_Product</fullName>
        <active>true</active>
        <label>Freedom Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>One_Time_Layout</fullName>
        <active>true</active>
        <description>Price Type picklist should only contain Fixed Fees</description>
        <label>One Time Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trail_Layout</fullName>
        <active>true</active>
        <description>Price Type picklist should contain all values except Fixed Fees</description>
        <label>Trail Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Upfront_Layout</fullName>
        <active>true</active>
        <description>Price Type picklist should contain all values except Fixed Fees</description>
        <label>Upfront Layout</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Advance_Value_Greater_than_zero</fullName>
        <active>true</active>
        <description>If Fees in Advance is Checked for Product, Then advance value should be greater than zero.</description>
        <errorConditionFormula>IF( RecordType.Name == &apos;One Time Layout&apos;,
AND(Product_code__r.Fees_in_Advance_or_On_Service_Delivery__c == True ,Advance_Value__c &lt;= 0),false)</errorConditionFormula>
        <errorDisplayField>Advance_Value__c</errorDisplayField>
        <errorMessage>As Fees in Advance is Paid, Advance Value should be greater than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_greater_then_Start_Date</fullName>
        <active>true</active>
        <description>Start date should be less than end date.</description>
        <errorConditionFormula>Price_End_date__c  &lt;  Price_Start_date__c</errorConditionFormula>
        <errorDisplayField>Price_End_date__c</errorDisplayField>
        <errorMessage>Product Start Date should be less than Product End date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_Type_Selection_for_Upfront_Trail</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Product_code__r.Earn_Upfront_Fees__c == True,
Product_code__r.Earn_Trail_Fees__c == True,
RecordType.Name == &apos;One Time Layout&apos;)</errorConditionFormula>
        <errorMessage>Record Type selected  should be Earn Upfront/Trail Fees.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_Type_for_Upfront_or_Trail</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND (
            Product_code__r.Earn_Upfront_Fees__c == False,
             Product_code__r.Earn_Trail_Fees__c == True, 
             OR(RecordType.Name == &apos;Upfront Layout&apos;,
             RecordType.Name == &apos;One Time Layout&apos;)),
AND (
            Product_code__r.Earn_Upfront_Fees__c == True,
             Product_code__r.Earn_Trail_Fees__c == False, 
             OR(RecordType.Name == &apos;Trail Layout&apos;,
             RecordType.Name == &apos;One Time Layout&apos;)))</errorConditionFormula>
        <errorMessage>Record Type Should be selected based on the Earn Fees Selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Report_Type_Selection_based_on_earn_fees</fullName>
        <active>true</active>
        <description>If &apos;Earn One time fees&apos; is checked then Record type selected for PriceBook should be &quot;One Time&quot;.
Otherwise Other two record types can be selected if &quot;Earn Trail Fees&quot; or &quot;Earn Upfront Fees&quot; or both are selected.</description>
        <errorConditionFormula>AND(
       OR(Product_code__r.Earn_One_Time_Fees__c == True,
       AND(Product_code__r.Earn_One_Time_Fees__c == True,
              Product_code__r.Fees_in_Advance_or_On_Service_Delivery__c == True)),
       OR(RecordType.Name == &apos;Upfront Layout&apos; , RecordType.Name == &apos;Trail Layout&apos;)
)</errorConditionFormula>
        <errorMessage>As Earn One Time Fees is checked, Record Type selected should be One Time.</errorMessage>
    </validationRules>
</CustomObject>